--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/Tweniee/My-Node-Web-App#readme",
   "dependencies": {
-    "nodemon": "^2.0.19"
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3",
+    "uuid": "^8.3.2"
   }
 }
